# datastarstuff

./: .gitignore  Cargo.toml  README.md
public/: index.html  styles.css
src/: main.rs
