[package]
name = "datastar-live-box-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
axum = "0.8.4"
datastar = { version = "0.3.1", features = ["axum"] }
futures-core = "0.3.31"
tokio = { version = "1.47.1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
